--- a/app/src/main/res/layout/activity_image_manipulations.xml
+++ b/app/src/main/res/layout/activity_image_manipulations.xml
@@ -1,11 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="match_parent" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-<org.opencv.android.JavaCameraView
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/image_manipulations_activity_surface_view" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="18dp"
+            android:layout_weight="1"
+            android:onClick="Next"
+            android:text="Assignment part B" />
+
+        <org.opencv.android.JavaCameraView
+            android:id="@+id/image_manipulations_activity_surface_view"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_above="@+id/button"
+            android:layout_alignParentStart="true" />
+    </RelativeLayout>
 </LinearLayout>
